css/main.css
/* CSS Document */
/*****************************************Color Palette*****************************
Light cyan (header,footer and aside) #E0FFFF (209, 255, 204)
Orange (links and button) #FF5600  (255, 86, 0)
Light yellow (section backgrounds): #FFFACD  (255, 250, 205)
Dark gray (body text): #333  (51, 51, 51)
****************************************************End of Color Palette***********
**********************************************************************************/
/*****************************************Eric Meyer CSS reset**********************/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/***************************************************End Eric Meyer CSS reset*********
************************************************************************************/
/*****************************************Site wide settings************************/
#wrapper {
    max-width: 960px; /*was width:960px*/
    margin: 0 auto;
}
body {
	max-width: 100%;
    background: #CCC;
	background-image: url(../images/background_texture.jpg); /*url(../images/wood.jpg);*/
	background-size: 100% 100%;
	background-repeat: no-repeat;
	font: 1em/1.4 Quicksand, sans-serif;
	/*font-family: 'Quicksand', sans-serif;
	font-size: 100%; */ /*default 16px*/
	/*line-height: 1.4; changed to font shorthand*/
	margin-top: 0;
	margin-bottom: 0;
	color: #333;
}
h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0 2%;
}
h2 {
	font-size: 1.5em; /*24px (24/16)*/
	font-weight: bold;
	padding: 20px 2%;
}
h3 {
	font-size: 1.25em; /*20px (20/16)*/
	font-weight: bold;
	padding-bottom: 20px;
}
p {
	font-size: 1.0625em; /*16px (16/16)-trying 17px (17/16)*/
    margin: 0;
    padding: 0 2%; /*15px (15/960)*/
}
img {
	max-width: 100%;
	margin-top: 0;
	margin-bottom: 0;
}
ul {
	margin-top: 0;
	margin-bottom: 0;
}
/***************************************************End of site wide settings*******
************************************************************************************/
/****************************************Header settings****************************/
#home {
    background: #E0FFFF;
}
h1 {
	text-indent: -104.16666%; /*-1000px; (-1000/960)*/
}
#home p {
	font-style: italic;
	font-weight: normal;
	margin-top: -20px;
}
#home ul {
	width: 97.91666%; /*940px (940/960)*/
	margin: 0 auto;
	list-style-type: none;
	padding:5px 2.34042% 22px 2.34042%; 
}
#home ul li a {
	width: 24.47916%; /*235px (235/960)*/
	float: left;
	text-decoration: none;
	text-align: center;
	color: #FF5600;
	font-weight: bold;
}
#home a:link {
	color: #FF5600;
}
#home a:visited {
	color: #FF5600;
}
#home a:hover {
	color: #333;
}
#home a:active {
	color: #FFFACD;
}
/***************************************************End of header settings*********
***********************************************************************************/
/*****************************************Main content settings********************/
#main_section {
	background: #FFFACD;
	padding-bottom: 20px;
	overflow: hidden; 
}
#main_section:before, #main_section:after {
	content: "";
	display: table;
}
#main_section:after {
	clear: both;
}
#main_section img {
	margin-bottom: 0;
	padding-bottom: 0;
	float:none; 
}
aside {
	width: 20%; 
	background: #E0FFFF;
	float: right;
	padding: 30px 3.5%;  
	margin-top: 0;
	margin-right: 2%; 
}
aside ul {
	font-size: 1.0625em; /*17px (17/16)*/
	font-style: italic;
	list-style-type: square;
	line-height: 1.5;
	padding-left: 16.2%; 
}
aside h3 {
	padding-bottom: 10px;
	text-align: center;
	text-shadow: 1px 1px 2px #003;
}
.column_text {
	width: 70%;
	float: left;
    -moz-column-count: 2; 
    -webkit-column-count: 2; 
    column-count: 2;
	column-width: 295px; /*295px*/ /*I tried to change to %, but the CSS validator said this does not allow %*/
    -moz-column-width: 295px; /*295px*/ 
    -webkit-column-width:295px; /*295px*/ 
}
.column_text p {
	padding-bottom: 10px;
	padding-left: 6%;
}
/*************************************************End of Main content settings*****
***********************************************************************************/
/*******************************************Ancient Knowledge section**************/
#ancientknowledge {
	width: 100%;
	background: rgba(255, 250, 205, 0.80);
	clear: both; 
	overflow: hidden;
}
#ancientknowledge img { 
 	max-width: 100%; 
	min-width: 28%; 
	float: right;
	padding-right: 2%; 
	padding-bottom: 40px;
}
#ancient_article {
	width: 75%; 
	float: none;
	padding-bottom: 30px;
}
#ancient_article h3 {
	width: 100%;
	padding: 5px 3%; 
}
#ancient_article p {
	float: none;
	padding-right: 1%;
	padding-bottom: 10px;
	padding-left: 3%;
	width: 80%; 
}
/***************************************************End of Ancient Knowledge*******
***********************************************************************************/
/*******************************************Gallery section************************/
#gallery {
	background: #FFFACD;
	clear: both;
	float: none;
}
/* ... */

